# sistemaIntegrado

./: .gitignore  cópias.txt  diario.md  diretrizes.md  leiame.md  mudançaDeGuia.txt
CPP/: CMakeLists.txt  Estados.me  EticaConstrutora.pro  main.cpp
CPP/APP/: APP.pro  PainelConexao.cpp  PainelConexao.h  main.cpp
CPP/APP/TOP/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
CPP/CORE/DRIVER/: SerialModerno.cpp  SerialModerno.h  SerialWin32.cpp  SerialWin32.h  motorSerial.cpp  motorSerial.hpp
CPP/CORE/TYPES/: DeviceConfigs.h  Dicionario.h  Equipamentos.h  configSerial.hpp  tipPonto.h
CPP/LIB/COM/: CMakeLists.txt  motorComunicacao.h  motorSerial.cpp  motorSerial.h  portaSerialWin.cpp  portaSerialWin.h
CPP/LIB/GEO/: CMakeLists.txt  Octree.cpp  Octree.h  TinMesh.cpp  TinMesh.h
CPP/LIB/QTW/: CMakeLists.txt  ConfigSerialWidget.cpp  ConfigSerialWidget.h  ConfigSerialWidget.ui
CPP/LIB/TIP/: CMakeLists.txt  dicionarioTextos.h  serialConfig.h  tipConfig.h  tipPonto.h
CPP/SERIAL/: SERIAL.pro  main.cpp
CPP/SERIAL-I/: SERIAL_I.pro  main.cpp
CPP/TOP/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
CPP/TST/: CMakeLists.txt  main.cpp
CPP/UI/: GUISerial.cpp  GUISerial.hpp  IFSerial.cpp  IFSerial.h
CPP/VALIDA/vMSerial/: main.cpp  vMSerial.pro
CPP/VALIDA/vMotorSerial/: logTeste.md  main.cpp  teste.md  vMotorSerial.pro
CPP/VALIDA/vSerial/: main.cpp  manual_serial.md  vSerial.pro
deployEtica/: quinto.iss
deployEtica/styles/: terceiro.iss
